@@ -1,3 +1,8 @@
+2023-09-14  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp--test-netbsd-p): New defun.
+	(tramp--test-check-files): Use it.
+
 2023-08-19  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-archive-tests.el (tramp-archive-test44-user-group-ids):
